--- a/views/index.html
+++ b/views/index.html
@@ -6,37 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-	<link id="callCss" rel="stylesheet" href="themes/css/bootstrap.min.css" type="text/css" media="screen" charset="utf-8" />
-
-	<link id="callCss"rel="stylesheet" href="themes/css/style.css" type="text/css" media="screen" charset="utf-8" />
-	<link href="themes/css/bootstrap-responsive.min.css" rel="stylesheet">
-	
-	<link type="text/css" rel="Stylesheet" href="jqx.base.css" />
-    <link rel="stylesheet" href="login_form.css" type="text/css" />
-    <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="jqxcore.js"></script>
-    <script type="text/javascript" src="jqxpasswordinput.js"></script>
-    <script type="text/javascript" src="jqxinput.js"></script>
-    <script type="text/javascript" src="jqxdatetimeinput.js"></script>
-    <script type="text/javascript" src="jqxcalendar.js"></script>
-    <script type="text/javascript" src="jqxtooltip.js"></script>
-    <script type="text/javascript" src="globalize.js"></script>
-    <script type="text/javascript" src="jqxbuttons.js"></script>
-    <script type="text/javascript" src="jqxscrollbar.js"></script>
-    <script type="text/javascript" src="jqxlistbox.js"></script>
-    <script type="text/javascript" src="jqxdropdownlist.js"></script>
-    <script type="text/javascript" src="jqxexpander.js"></script>
-    <script type="text/javascript" src="jqxvalidator.js"></script>
-    <script type="text/javascript" src="demos.js"></script>
-    <script type="text/javascript" src="login.js"></script>
-    <script type="text/javascript" src="select_login_signin.js"></script>
+    
+    
+	<link id="callCss" rel="stylesheet" href="../public/stylesheets/bootstrap/bootstrap.min.css" type="text/css" media="screen" charset="utf-8" />
+	<link id="callCss"rel="stylesheet" href="../public/stylesheets/bootstrap/style.css" type="text/css" media="screen" charset="utf-8" />
+	<link href="../public/stylesheets/bootstrap/bootstrap-responsive.min.css" rel="stylesheet">
+	<link type="text/css" rel="Stylesheet" href="../public/stylesheets/bootstrap/jqx.base.css" />
+    <link rel="stylesheet" href="../public/stylesheets/login_form.css" type="text/css" />
+    
+    
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxcore.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxpasswordinput.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxinput.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxdatetimeinput.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxtooltip.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/globalize.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxbuttons.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxscrollbar.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxlistbox.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxdropdownlist.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxexpander.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxvalidator.js"></script>
+    <script type="text/javascript" src="../public/javascripts/bootstrap/demos.js"></script>
+    <script type="text/javascript" src="../public/javascripts/login.js"></script>
+    <script type="text/javascript" src="../public/javascripts/select_login_signin.js"></script>
 	
 </head>
 <body>
 <!-- ===========================================Header Start================================================ -->
 	<div id="headerSection">
 	<div class="container">
-	<div class="span3 logo"><a href="#"><img src="themes/img/logo1.png" alt="" /></a></div>
+	<div class="span3 logo"><a href="#"><img src="../public/images/logo1.png" alt="" /></a></div>
 	</div>
 	</div>
 <!-- ===========================================Header Ends================================================ -->
@@ -74,7 +75,7 @@
             LOG IN
         </div>
         <div style="font-family: Verdana; font-size: 13px;">
-            <form id="form" style="overflow: hidden; " action="./" method=""> <!-- 나중에 action에 큰동오빠 url넣고 method에는 get/post이런거 쓰기!! -->
+            <form id="form" style="overflow: hidden; " action="./" method="">
                 <table>  
                     <tr>
                             <input id="email" type="text" placeholder="mail@address.com" required/>
@@ -83,7 +84,7 @@
 
                             <input id="password" type="password" placeholder="password" required />
                     </tr>
-                    <input type="submit" value="LOG IN"  />
+                    <input id="submit" type="submit" value="LOG IN"  />
                 </table>
             </form>
         </div>
