--- a/views/index.html
+++ b/views/index.html
@@ -7,30 +7,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    
+    <!-- login form style -->
 	<link id="callCss" rel="stylesheet" href="../public/stylesheets/bootstrap/bootstrap.min.css" type="text/css" media="screen" charset="utf-8" />
-	<link id="callCss"rel="stylesheet" href="../public/stylesheets/bootstrap/style.css" type="text/css" media="screen" charset="utf-8" />
+	<!-- background style -->
+	<link id="callCss"rel="stylesheet" href="../public/stylesheets/bootstrap/style.css" type="text/css" media="screen" charset="utf-8" /> 
+	<!-- header section logo location setting -->
 	<link href="../public/stylesheets/bootstrap/bootstrap-responsive.min.css" rel="stylesheet">
-	<link type="text/css" rel="Stylesheet" href="../public/stylesheets/bootstrap/jqx.base.css" />
     <link rel="stylesheet" href="../public/stylesheets/login_form.css" type="text/css" />
-    
-    
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxcore.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxpasswordinput.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxinput.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxdatetimeinput.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxtooltip.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/globalize.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxbuttons.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxscrollbar.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxlistbox.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxdropdownlist.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxexpander.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/jqxvalidator.js"></script>
-    <script type="text/javascript" src="../public/javascripts/bootstrap/demos.js"></script>
-    <script type="text/javascript" src="../public/javascripts/login.js"></script>
-    <script type="text/javascript" src="../public/javascripts/select_login_signin.js"></script>
+    <script type="text/javascript" src="../public/javascripts/index.js"></script>
 	
 </head>
 <body>
