--- a/views/index.html
+++ b/views/index.html
@@ -68,7 +68,7 @@
 
                             <input id="login_password" type="password" placeholder="password" required />
                     </tr>
-                    <input id="submit" type="submit" value="LOG IN" id="submit" />
+                    <input type="button" value="LOG IN" id="login_submit" />
                 </table>
             </form>
         </div>
@@ -86,18 +86,18 @@
             <form id="form" style="overflow: hidden; " action="./" method=""> <!-- 나중에 action에 큰동오빠 url넣고 method에는 get/post이런거 쓰기!! -->
                 <table>  
                     <tr>
-                            <input id="name" type="text" placeholder="name" required/>
+                            <input id="signin_name" type="text" placeholder="name" required/>
                     </tr>
                     <tr>
-                            <input id="email" type="text" placeholder="mail@address.com" required/>
+                            <input id="signin_email" type="text" placeholder="mail@address.com" required/>
                     </tr>
                     <tr>
-                            <input id="password" type="password" placeholder="password" required />
+                            <input id="signin_password" type="password" placeholder="password" required />
                     </tr>
                     <tr>
                             <input id="password_confirm" type="password" placeholder="Confirm password" required />
                     </tr>
-                    <input type="submit" value="LOG IN"  />
+                    <input type="button" value="Signin IN" id="signin_submit" />
                 </table>
             </form>
         </div>
