--- a/public/stylesheets/login_form.css
+++ b/public/stylesheets/login_form.css
@@ -5,7 +5,7 @@ a:hover{color:#1dabb8}
 fieldset{border:none;margin:0}
 input{border:none;font-family:inherit;font-size:inherit;-webkit-appearance:none;margin:0}
 input:focus{outline:none}
-input[type=submit]{cursor:pointer}
+input[type=button]{cursor:pointer}
 .clearfix{zoom:1}
 .clearfix:before,.clearfix:after{content:"";display:table}
 .clearfix:after{clear:both} */
@@ -16,8 +16,8 @@ input[type=submit]{cursor:pointer}
 #login_form input[type=text],#login_form input[type=password]{border:1px solid #dcdcdc;font-size:14px;width:87%;margin:10px;padding:12px;}
 #login_form input[type=text]{border-radius:3px 3px 0 0;font-size:14px;width:87%;margin:10px}
 #login_form input[type=password]{border-top:none;border-radius:0 0 3px 3px;font-size:14px;width:87%;margin:10px}
-#login_form input[type=submit]{background:#1dabb8;border-radius:3px;color:#fff;float:right;font-weight:700;margin-top:20px;width:150px;padding:12px 20px}
-#login_form input[type=submit]:hover{background:#198d98}
+#login_form input[type=button]{background:#1dabb8;border-radius:3px;color:#fff;float:right;font-weight:700;margin-top:20px;width:150px;padding:12px 20px}
+#login_form input[type=button]:hover{background:#198d98}
 #login_form fieldset p label{float:left}
 .info{background:#e5e5e5;border-radius:50%;display:inline-block;height:20px;line-height:20px;text-align:center;width:20px;margin:0 10px 0 0}
 
@@ -28,8 +28,8 @@ input[type=submit]{cursor:pointer}
 #signin_form input[type=text],#signin_form input[type=password]{border:1px solid #dcdcdc;font-size:14px;width:87%;margin:0;padding:0 10px;}
 #signin_form input[type=text]{border-radius:3px 3px 0 0;font-size:14px;width:87%;margin:10px}
 #signin_form input[type=password]{border-top:none;border-radius:0 0 3px 3px;font-size:14px;width:87%;margin:10px}
-#signin_form input[type=submit]{background:#1dabb8;border-radius:3px;color:#fff;float:right;font-weight:700;margin-top:20px;width:150px;padding:12px 20px}
-#signin_form input[type=submit]:hover{background:#198d98}
+#signin_form input[type=button]{background:#1dabb8;border-radius:3px;color:#fff;float:right;font-weight:700;margin-top:20px;width:150px;padding:12px 20px}
+#signin_form input[type=button]:hover{background:#198d98}
 #signin_form fieldset p label{float:left}
 .info{background:#e5e5e5;border-radius:50%;display:inline-block;height:20px;line-height:20px;text-align:center;width:20px;margin:0 10px 0 0}
 
