--- a/views/index.html
+++ b/views/index.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+    
+    <!-- ----------------------------------------------------java script begins------------------------------------------------------ -->
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <!-- login form style -->
-	<link id="callCss" rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css" type="text/css" media="screen" charset="utf-8" />
-	<!-- background style -->
-	<link id="callCss"rel="stylesheet" href="/stylesheets/bootstrap/style.css" type="text/css" media="screen" charset="utf-8" /> 
-	<!-- header section logo location setting -->
-	<link href="/stylesheets/bootstrap/bootstrap-responsive.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheets/login_form.css" type="text/css" />
+    
     <script type="text/javascript" src="/javascripts/index.js"></script>
+    <script type="text/javascript" src="/javascripts/index2.js"></script>
+    
+	<link rel="stylesheet" type="text/css" media="screen" charset="utf-8" href="/stylesheets/bootstrap/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" media="screen" charset="utf-8" href="/stylesheets/bootstrap/style.css" /> 
+	<link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap-responsive.min.css">
+	
+    <link rel="stylesheet" type="text/css" href="/stylesheets/login_form.css" />
 	
 </head>
+
 <body>
 <!-- ===========================================Header Start================================================ -->
 	<div id="headerSection">
