--- a/views/index.html
+++ b/views/index.html
@@ -101,7 +101,7 @@
                     <tr>
                             <input id="password_confirm" type="password" placeholder="Confirm password" required />
                     </tr>
-                    <input type="button" value="Signin IN" id="signin_submit" />
+                    <input type="button" value="SIGN IN" id="signin_submit" />
                 </table>
             </form>
         </div>
