--- a/views/mypage.html
+++ b/views/mypage.html
@@ -49,8 +49,7 @@
 
 						</TABLE>
 						<div class="okclosebtn">
-							<a href="#" id="create_group_ok_btn" class="okbtn">Complete</a><a
-							href="#" class="cbtn">Close</a>
+							<a href="#" id="create_group_ok_btn" class="okbtn">Complete</a><a href="#" class="cbtn">Close</a>
 						</div>
 					</div>
 				</div>
