--- a/views/mypage.html
+++ b/views/mypage.html
@@ -182,7 +182,6 @@
 			<div>
 				<form id="form" style="overflow: hidden;" action="./" method="">
 					<div id="my_group_list"></div>
-					<div id="templates_1" style="display: none;"></div>
 				</form>
 			</div>
 			<div id="title">
@@ -190,10 +189,10 @@
 			</div>
 			<div>
 				<form id="form" style="overflow: hidden;" action="./" method="">
-					<table id="waitingList">
-					</table>
+					<div id="waitingList"></div>
 				</form>
 			</div>
+			<div id="templates_1" style="display: none;"></div>
 		</div>
 	</body>
 </html>
