--- a/views/group.html
+++ b/views/group.html
@@ -8,23 +8,23 @@
 		<meta name="author" content="">
 
 		<!-- -------------------------------------------------------------javascript begins----------------------------------------------------------- -->
-		<script type="text/javascript" src="/javascripts/bootstrap/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="/javascripts/bootstrap/bootstrap.min.js"></script>
-		<script type="text/javascript" src="/javascripts/bootstrap/jquery.scrollTo-1.4.3.1-min.js"></script>
-		<script type="text/javascript" src="/javascripts/bootstrap/jquery.easing-1.3.min.js"></script>
-		<script type="text/javascript" src="/javascripts/bootstrap/default.js"></script>
+		<script type="text/javascript" src="javascripts/bootstrap/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="javascripts/bootstrap/bootstrap.min.js"></script>
+		<script type="text/javascript" src="javascripts/bootstrap/jquery.scrollTo-1.4.3.1-min.js"></script>
+		<script type="text/javascript" src="javascripts/bootstrap/jquery.easing-1.3.min.js"></script>
+		<script type="text/javascript" src="javascripts/bootstrap/default.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.5.js"></script>
 		
-		<script type="text/javascript" src="/javascripts/group.js"></script>
+		<script type="text/javascript" src="javascripts/group.js"></script>
 
-		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap/bootstrap.min.css" media="screen" charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap/bootstrap-responsive.min.css"/>
-		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap/style.css" media="screen" charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrapjqx.base.css"/>
-		<link rel="stylesheet" type="text/css" href="/stylesheet/bootstrap/bootstrap-responsive.min.css"/>
+		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap/bootstrap.min.css" media="screen" charset="utf-8"/>
+		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap/bootstrap-responsive.min.css"/>
+		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap/style.css" media="screen" charset="utf-8"/>
+		<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap/jqx.base.css"/>
 		
-		<link rel="stylesheet" type="text/css" href="/stylesheets/group.css"/>
+		
+		<link rel="stylesheet" type="text/css" href="stylesheets/group.css"/>
 
 	</head>
 	<body>
@@ -59,7 +59,7 @@
 
 			<div class="container">
 				<div class="span3 logo">
-					<a href="#"><img src="themes/img/logo1.png" alt="" /></a>
+					<a href="#"><img src="images/logo1.png" alt="" /></a>
 				</div>
 
 				<div class="navbar">
