--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -34,21 +34,18 @@
 	<div id="headerSection">
 		<div id="toptoolbar">
 			<div>
-				<button id="logout" type="button">
+				<button id="btnLogout" type="button">
 					<ins>LOGOUT</ins>
 				</button>
 
 			</div>
 			<div>
-				<button type="button">YeEunDaDongNim</button>
+				<button type="button" id="btnHelloMessage"></button>
 			</div>
 			<div>
 				<form name="groupselect" method="POST">
 					<div align="center">
-						<select name="group-dropdown">
-							<option value="group1">Group1</option>
-							<option value="group2">Group2</option>
-							<option value="group3">Group3</option>
+						<select id="groupList" name="group-dropdown">
 						</select>
 					</div>
 				</form>
