msgbox no resize

--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -168,7 +168,7 @@
 							<tr>
 								<td colspan="2">
 									내용
-									<textarea cols="60" id="dataMsgcontent"></textarea>
+									<textarea cols="60" id="dataMsgcontent" resize="none"></textarea>
 								</td>
 							</tr>
 
