--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -70,7 +70,7 @@
 						<li class="dropdown"><a href="#boardSection"
 							class="dropdown-toggle" data-toggle="dropdown">BOARD</a>
 							<ul class="dropdown-menu">
-								<li><a href="#">자유게시판</a></li>
+								<li><a id="freeboard">자유게시판</a></li>
 								<li><a href="#">익명게시판</a></li>
 							</ul></li>
 						<li><a href="#familySection">FAMILY</a></li>
