--- a/views/groupHome.html
+++ b/views/groupHome.html
@@ -77,7 +77,7 @@
 						<li class="dropdown"><a href="#settingSection"
 							class="dropdown-toggle" data-toggle="dropdown">SETTING</a>
 						<ul class="dropdown-menu">
-								<li><a href="#">멤버관리</a></li>
+								<li><a href="#" id="btnSettingMember">멤버관리</a></li>
 								<li><a href="#">그룹관리</a></li>
 								<li><a href="#">게시판관리</a></li>
 							</ul></li>
@@ -94,7 +94,7 @@
 			<table cellpadding="15px">
 				<tr>
 					<td>
-						<a href="#" id="imageProfile"><img class="imgclick" style="outline: none;" src="/images/soolove.png" /></a>
+						<a href="#" id="imageProfile"><img class="imgclick" style="outline: none;" src="/images/soolove.PNG" /></a>
 					</td>
 				</tr>
 			</table>
@@ -174,7 +174,7 @@
 
 						</TABLE>
 						<div class="btnOkclose">
-							<a href="#" id="btnSendmessageok" class="btnOk">Complete</a><a href="#" class="btnClose">Close</a>
+							<a href="#" id="btnSendmessageok" class="btnOk">보내기</a><a href="#" class="btnClose">취소</a>
 						</div>
 					</div>
 				</div>
@@ -197,7 +197,7 @@
 							</tr>
 							<tr>
 								<td colspan="2">
-									<div id="dataMsgcontent">박다솜씨 경비아저씹니다. 오늘은 철야신청 안하시나요?</div>
+									<div id="RvdMsgcontent">박다솜씨 경비아저씹니다. 오늘은 철야신청 안하시나요?</div>
 								</td>
 							</tr>
 
